--- a/Trab/src/app/page/home/home.page.html
+++ b/Trab/src/app/page/home/home.page.html
@@ -12,7 +12,7 @@
   <div id="container">
     <ion-list>
       <ion-item *ngFor="let hardware of hardwares">
-          <ion-label class="ion-text-center" (click)="irParaDetalhar(hardware)">{{hardware.marca}} - {{hardware.modelo}}</ion-label>
+          <ion-label class="test" class="ion-text-center" (click)="irParaDetalhar(hardware)">{{hardware.marca}} - {{hardware.modelo}}</ion-label>
       </ion-item>
     </ion-list>
   </div>
