--- a/Trab/src/app/page/cadastrar/cadastrar.page.html
+++ b/Trab/src/app/page/cadastrar/cadastrar.page.html
@@ -104,7 +104,7 @@
           </ion-label>
         </ion-item>
       </ion-list>
-      <ion-button expand="block" color="success" type="submit">Cadastrar</ion-button>
+      <ion-button class="btn" expand="block" color="success" type="submit">Cadastrar</ion-button>
     </form>
   </div>
 </ion-content>
