--- a/Trab/src/theme/variables.scss
+++ b/Trab/src/theme/variables.scss
@@ -74,6 +74,10 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-toolbar-background: #303030;
+  --ion-toolbar-color: #2dd36f;
+
 }
 
 @media (prefers-color-scheme: dark) {
