--- a/Trab/src/app/page/cadastrar/cadastrar.page.scss
+++ b/Trab/src/app/page/cadastrar/cadastrar.page.scss
@@ -1,4 +1,6 @@
-.btn{
-    display: flex;
-    align-items: center;
+
+#item{
+    border-radius: 3px;
+    border: solid 2px rgb(19, 18, 18);
+    margin-top: 2px;
 }
