--- a/Trab/src/app/page/detalhar/detalhar.page.html
+++ b/Trab/src/app/page/detalhar/detalhar.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="content">
   <ion-content>
     <div id="container">
       <form [formGroup]="formCadastrar" (ngSubmit)="submitForm()">
@@ -17,7 +17,7 @@
             <ion-toggle color="success"
             (ionChange)="alterarEdicao()"></ion-toggle>
           </ion-item>
-          <ion-item>
+          <ion-item disabled="{{edicao}}" id="item">
             <ion-select disabled="{{edicao}}" formControlName="tipo" placeholder="Tipo do hardware">
               <ion-select-option value="placaMae">Placa Mãe</ion-select-option>
               <ion-select-option value="processador">Processador</ion-select-option>
@@ -32,7 +32,7 @@
             </span>
           </ion-item>
 
-          <ion-item>
+          <ion-item disabled="{{edicao}}" id="item">
             <ion-input disabled="{{edicao}}" placeholder="marca" formControlName="marca">
               
             </ion-input>
@@ -45,7 +45,7 @@
             </span>
           </ion-item>
 
-          <ion-item>
+          <ion-item disabled="{{edicao}}" id="item">
             <ion-input disabled="{{edicao}}" placeholder="modelo" formControlName="modelo">
               
             </ion-input>
@@ -57,7 +57,7 @@
             </span>
           </ion-item>
 
-          <ion-item>
+          <ion-item disabled="{{edicao}}" id="item">
             <ion-label *ngIf="this.formCadastrar.value.preco!=''">R$: </ion-label>
             <ion-input  disabled="{{edicao}}" (ionChange)="handleValorTotal()" formControlName="preco" type="text" name="money" placeholder="(R$) Real" [brmasker]="{money: true}">
             </ion-input>
@@ -69,7 +69,7 @@
             </span>
           </ion-item>
 
-          <ion-item>
+          <ion-item disabled="{{edicao}}" id="item">
             <ion-label>
               Desconto
             </ion-label>
@@ -96,7 +96,7 @@
               <ion-select-option value="90">90%</ion-select-option>
             </ion-select>
           </ion-item>
-          <ion-item>
+          <ion-item disabled="{{edicao}}" id="item">
             <ion-input disabled="{{edicao}}" placeholder="Quantidade" formControlName="quantidade">  
             </ion-input>
           </ion-item>
@@ -114,7 +114,7 @@
           </ion-item>
         </ion-list>
       </form>
-      <ion-button disabled="{{edicao}}" expand="block" (click)="editar()">Salvar</ion-button>
+      <ion-button color="success" disabled="{{edicao}}" expand="block" (click)="editar()">Salvar</ion-button>
       <ion-button  disabled="{{edicao}}"  expand="block" (click)="excluir()" color="danger">Excluir</ion-button>
     </div>
 </ion-content>
