--- a/Trab/src/app/page/detalhar/detalhar.page.scss
+++ b/Trab/src/app/page/detalhar/detalhar.page.scss
@@ -1,6 +1,5 @@
-.btneditar{
-    color: aquamarine;
-    display: flex;
-    align-items: center;
-    border-radius: 4px;
+#item{
+    border-radius: 3px;
+    border: solid 2px rgb(19, 18, 18);
+    margin-top: 2px;
 }
