--- a/Trab/src/app/page/cadastrar/cadastrar.page.scss
+++ b/Trab/src/app/page/cadastrar/cadastrar.page.scss
@@ -1,6 +1,5 @@
-
 #item{
-    border-radius: 3px;
-    border: solid 2px rgb(19, 18, 18);
-    margin-top: 2px;
+    border-radius: 35px;
+    border: solid 1px rgb(19, 18, 18);
+    margin: 7px;
 }
