--- a/Trab/src/app/page/detalhar/detalhar.page.scss
+++ b/Trab/src/app/page/detalhar/detalhar.page.scss
@@ -1,5 +1,5 @@
 #item{
-    border-radius: 3px;
+    border-radius: 35px;
     border: solid 2px rgb(19, 18, 18);
-    margin-top: 2px;
+    margin: 7px;
 }
