--- a/Trab/src/app/page/home/home.page.scss
+++ b/Trab/src/app/page/home/home.page.scss
@@ -1,6 +1,7 @@
 #item{
     --background:rgb(206, 187, 187);
-    border-radius: 6px;
+    border-radius: 45px;
     border: solid 2px rgb(19, 18, 18);
-    margin-top: 2px;
+    margin: 3%;
+    font-size: 28px;
 }
