--- a/Trab/src/app/page/cadastrar/cadastrar.page.html
+++ b/Trab/src/app/page/cadastrar/cadastrar.page.html
@@ -103,6 +103,18 @@
             Valor Total: R$ {{valorTotal}}
           </ion-label>
         </ion-item>
+
+        <ion-item>
+          <ion-label>
+            Selecione a data de nascimento
+          </ion-label>
+              <ion-datetime-button datetime="datetime"></ion-datetime-button>
+              <ion-modal [keepContentsMounted]="true">
+                <ng-template>
+                  <ion-datetime formControlName=dataNascimento id="datetime"  max="{{data}}" presentation="date"></ion-datetime>
+                </ng-template>
+              </ion-modal>
+        </ion-item>
       </ion-list>
       <ion-button class="btn" expand="block" color="success" type="submit">Cadastrar</ion-button>
     </form>
