--- a/Trab/src/app/page/detalhar/detalhar.page.html
+++ b/Trab/src/app/page/detalhar/detalhar.page.html
@@ -112,6 +112,17 @@
               Valor Total: R$ {{valorTotal}}
             </ion-label>
           </ion-item>
+          <ion-item>
+            <ion-label>
+              Selecione a data de nascimento
+            </ion-label>
+                <ion-datetime-button datetime="datetime"></ion-datetime-button>
+                <ion-modal [keepContentsMounted]="true">
+                  <ng-template>
+                    <ion-datetime formControlName=dataNascimento id="datetime"  max="{{data}}" presentation="date"></ion-datetime>
+                  </ng-template>
+                </ion-modal>
+          </ion-item>
         </ion-list>
       </form>
       <ion-button color="success" disabled="{{edicao}}" expand="block" (click)="editar()">Salvar</ion-button>
