--- a/Trab/src/app/page/detalhar/detalhar.page.html
+++ b/Trab/src/app/page/detalhar/detalhar.page.html
@@ -107,21 +107,25 @@
             </span>
           </ion-item>
 
+          <ion-item>
+            <ion-label>
+              Selecione a data de Lançamento
+            </ion-label>
+                <ion-datetime-button disabled="{{edicao}}" datetime="datetime"></ion-datetime-button>
+                <ion-modal [keepContentsMounted]="true">
+                  <ng-template>
+                    <ion-datetime disabled="{{edicao}}" formControlName=dataLancamento id="datetime"  max="{{data}}" presentation="date"></ion-datetime>
+                  </ng-template>
+                </ion-modal>
+          </ion-item>
+
           <ion-item class="ion-text-center">
             <ion-label>
               Valor Total: R$ {{valorTotal}}
             </ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>
-              Selecione a data de nascimento
-            </ion-label>
-                <ion-datetime-button datetime="datetime"></ion-datetime-button>
-                <ion-modal [keepContentsMounted]="true">
-                  <ng-template>
-                    <ion-datetime formControlName=dataNascimento id="datetime"  max="{{data}}" presentation="date"></ion-datetime>
-                  </ng-template>
-                </ion-modal>
+            <img src="{{hardware.downloadURL}}" />
           </ion-item>
         </ion-list>
       </form>
