--- a/Trab/src/app/page/detalhar/detalhar.page.html
+++ b/Trab/src/app/page/detalhar/detalhar.page.html
@@ -97,7 +97,7 @@
             </ion-select>
           </ion-item>
           <ion-item disabled="{{edicao}}" id="item">
-            <ion-input disabled="{{edicao}}" placeholder="Quantidade" formControlName="quantidade">  
+            <ion-input disabled="{{edicao}}" placeholder="Quantidade" (ionChange)="handleValorTotal()" formControlName="quantidade">
             </ion-input>
           </ion-item>
 
@@ -125,8 +125,15 @@
             </ion-label>
           </ion-item>
           <ion-item>
-            <img src="{{hardware.downloadURL}}" />
+            <img src="{{hardware.downloadURL}}"/>
           </ion-item>
+
+          <ion-item>
+            <ion-button disabled="{{edicao}}" size = "default" color="sucess" shape="round">
+              <input type="file" formControlName="image" (change) = "uploadFile($event.target)"/>
+            </ion-button>
+          </ion-item>
+
         </ion-list>
       </form>
       <ion-button color="success" disabled="{{edicao}}" expand="block" (click)="editar()">Salvar</ion-button>
