--- a/Trab/src/app/page/home/home.page.html
+++ b/Trab/src/app/page/home/home.page.html
@@ -11,14 +11,10 @@
 
   <div id="container">
     <ion-list>
-      <ion-item id="item" *ngFor="let hardware of hardwares">
-      <ion-item>
-          <ion-avatar>
-            <img src="{{hardware.downloadURL}}" />
-          </ion-avatar>
-          <ion-label color="dark" class="test" class="ion-text-center" (click)="irParaDetalhar(hardware)">{{hardware.marca}} - {{hardware.modelo}}
-          </ion-label>
-        </ion-item>
+      <ion-item class="item" *ngFor="let hardware of hardwares">
+        <img style="max-width: 50px;margin: 5px;" src="{{hardware.downloadURL}}"/>
+        <ion-label color="dark" class="test" class="ion-text-center" (click)="irParaDetalhar(hardware)">{{hardware.marca}} - {{hardware.modelo}}
+        </ion-label>
       </ion-item>
     </ion-list>
   </div>
